--- a/index.html
+++ b/index.html
@@ -1,52 +1,49 @@
 <!doctype html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Schlaftagebuch</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1, viewport-fit=cover"/>
+  <title>Schlaftagebuch v11 (PWA)</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#0f172a">
   <link rel="icon" href="icons/icon-192.png">
-  <link rel="apple-touch-icon" href="icons/icon-512.png">
   <link rel="stylesheet" href="styles.css">
   <script defer src="app.js"></script>
 </head>
 <body>
   <header class="topbar">
     <h1>Schlaftagebuch</h1>
-    <nav class="tabs" id="tabs">
-      <button data-tab="entry" class="active">Eintrag</button>
-      <button data-tab="week">Woche</button>
-      <button data-tab="month">Monat</button>
-      <button data-tab="settings">Einstellungen</button>
-    </nav>
   </header>
 
   <main>
-    <!-- Eintrag -->
-    <section id="entry" class="tab active">
+    <section id="home" class="tab active">
+      <div class="card">
+        <h3>Heute</h3>
+        <div class="stats kpi">
+          <div class="stat"><h4>Zuletzt gespeichert</h4><div id="homeLast" class="big">–</div></div>
+          <div class="stat"><h4>Ø Qualität (Woche)</h4><div id="homeQ" class="big">–</div></div>
+          <div class="stat"><h4>Ø Dauer (Woche)</h4><div id="homeH" class="big">–</div></div>
+        </div>
+        <div class="summary" style="margin-top:10px">
+          <button onclick="navigate('entry')">+ Neuer Eintrag</button>
+          <button class="secondary" onclick="navigate('week')">Wochenansicht</button>
+        </div>
+      </div>
+    </section>
+
+    <section id="entry" class="tab">
       <div class="card">
         <div class="row g2">
-          <div class="col">
-            <label>Datum</label>
-            <input type="date" id="dateInput">
-          </div>
-          <div class="col">
-            <label>Zu Bett</label>
-            <input type="time" id="bedTime">
-          </div>
-          <div class="col">
-            <label>Eingeschlafen (ca.)</label>
-            <input type="time" id="asleepTime">
-          </div>
-          <div class="col">
-            <label>Aufgewacht</label>
-            <input type="time" id="wakeTime">
-          </div>
-          <div class="col">
-            <label>Aufgestanden</label>
-            <input type="time" id="upTime">
-          </div>
+          <div class="col"><label for="dateInput">Datum</label><input type="date" id="dateInput"></div>
+          <div class="col"><label for="bedTime">Zu Bett</label><input type="time" id="bedTime"></div>
+          <div class="col"><label for="asleepTime">Eingeschlafen (ca.)</label><input type="time" id="asleepTime"></div>
+          <div class="col"><label for="wakeTime">Aufgewacht</label><input type="time" id="wakeTime"></div>
+          <div class="col"><label for="upTime">Aufgestanden</label><input type="time" id="upTime"></div>
+        </div>
+        <div class="checks">
+          <label><input type="checkbox" id="noSleep"> Nicht geschlafen (durchgewacht)</label>
         </div>
       </div>
 
@@ -62,51 +59,62 @@
       </div>
 
       <div class="card">
+        <h3>2b. Einschlafen – wie hat es geklappt?</h3>
+        <div id="gaugeOnset" class="gauge-wrap"></div>
+        <div id="onsetAutoFill" class="small"></div>
+      </div>
+
+      <div class="card">
+        <h4>Gründe, die das Einschlafen beeinflusst haben (Gewichtung & Intensität):</h4>
+        <div id="onsetChips" class="chips" aria-label="Einschlaf-Gründe">
+          <button data-val="rumination" title="Grübeln/Sorgen">🧠 Grübeln/Sorgen</button>
+          <button data-val="screenLate" title="Späte Screen-Time">📱 Screen spät</button>
+          <button data-val="caffeine" title="Koffein am Abend">☕ Koffein</button>
+          <button data-val="heavyMeal" title="Schweres Abendessen">🍝 Schweres Essen</button>
+          <button data-val="noise" title="Geräusche/Licht">🔊 Geräusche</button>
+          <button data-val="pain" title="Schmerzen/Unwohlsein">🤕 Schmerzen</button>
+          <button data-val="stress" title="Stress">⚡ Stress</button>
+        </div>
+        <div class="row g2">
+          <div class="col"><label for="onsetAddInput">Eigenen Grund hinzufügen</label><input type="text" id="onsetAddInput" placeholder="z. B. Gedankenkarussell …"></div>
+          <div class="col"><label>&nbsp;</label><button id="onsetAddBtn" class="secondary">Zur Liste hinzufügen</button></div>
+        </div>
+      </div>
+
+      <div class="card">
         <h3>3. Tagschlaf</h3>
         <div class="row g2">
-          <div class="col">
-            <label>Tagschlaf?</label>
-            <div class="radio">
-              <label><input type="radio" name="nap" value="yes"> Ja</label>
-              <label><input type="radio" name="nap" value="no" checked> Nein</label>
-            </div>
-          </div>
-          <div class="col">
-            <label>Wann?</label>
-            <input type="time" id="napWhen">
-          </div>
-          <div class="col">
-            <label>Wie lange (Minuten)?</label>
-            <input type="number" id="napDuration" min="0" step="5" placeholder="0">
-          </div>
+          <div class="col"><label>Tagschlaf?</label><div class="radio">
+            <label><input type="radio" name="nap" value="yes"> Ja</label>
+            <label><input type="radio" name="nap" value="no" checked> Nein</label>
+          </div></div>
+          <div class="col"><label for="napWhen">Wann?</label><input type="time" id="napWhen"></div>
+          <div class="col"><label for="napDuration">Wie lange (Minuten)?</label><input type="number" id="napDuration" min="0" step="5" placeholder="0"></div>
         </div>
       </div>
 
       <div class="card">
         <h3>4. Aufwachen in der Nacht</h3>
         <div class="row g2">
-          <div class="col">
-            <label>Aufgewacht?</label>
-            <div class="radio">
-              <label><input type="radio" name="awake" value="yes"> Ja</label>
-              <label><input type="radio" name="awake" value="no" checked> Nein</label>
-            </div>
-          </div>
-          <div class="col">
-            <label>Wie oft (circa)?</label>
-            <input type="number" id="awakeCount" min="0" max="10" step="1" placeholder="0">
-          </div>
+          <div class="col"><label>Aufgewacht?</label><div class="radio">
+            <label><input type="radio" name="awake" value="yes"> Ja</label>
+            <label><input type="radio" name="awake" value="no" checked> Nein</label>
+          </div></div>
+          <div class="col"><label for="awakeCount">Wie oft (circa)?</label><input type="number" id="awakeCount" min="0" max="10" step="1" placeholder="0"></div>
         </div>
-        <label>Gründe (Mehrfachauswahl):</label>
-        <div class="chips" id="reasons">
-          <button data-val="toilet">Toilettengang</button>
-          <button data-val="rumination">Grübeln/Sorgen</button>
-          <button data-val="temp">Temperatur (zu warm/kalt)</button>
-          <button data-val="discomfort">Unbequemlichkeit</button>
-          <button data-val="noiseLight">Geräusche/Licht</button>
+        <label>Gründe:</label>
+        <div class="chips" id="reasons" aria-label="Aufwach-Gründe">
+          <button data-val="toilet" title="Toilettengang">🚻 Toilettengang</button>
+          <button data-val="rumination" title="Grübeln/Sorgen">🧠 Grübeln</button>
+          <button data-val="temp" title="Temperatur (zu warm/kalt)">🌡️ Temperatur</button>
+          <button data-val="discomfort" title="Unbequemlichkeit">🛏️ Unbequem</button>
+          <button data-val="noiseLight" title="Geräusche/Licht">🔆 Geräusch/Licht</button>
         </div>
-
-        <label>Notizen (ohne Uhrzeiten):</label>
+        <div class="row g2">
+          <div class="col"><label for="awakeAddInput">Eigenen Grund hinzufügen</label><input type="text" id="awakeAddInput" placeholder="z. B. Albtraum …"></div>
+          <div class="col"><label>&nbsp;</label><button id="awakeAddBtn" class="secondary">Zur Liste hinzufügen</button></div>
+        </div>
+        <label for="nightNotes">Notizen (ohne Uhrzeiten):</label>
         <textarea id="nightNotes" rows="3" placeholder="Kurze Notizen..."></textarea>
       </div>
 
@@ -118,16 +126,20 @@
               <label><input type="radio" name="drink20" value="yes"> Nach 20 Uhr getrunken</label>
               <label><input type="radio" name="drink20" value="no" checked> Nein</label>
             </div>
-            <label>Menge (ml)</label>
+            <label for="drinkMl">Menge (ml)</label>
             <input type="number" id="drinkMl" min="0" step="50" placeholder="0">
           </div>
           <div>
             <h3>7. Einschlafrituale</h3>
-            <div class="chips" id="rituals">
-              <button data-val="read">Gelesen</button>
-              <button data-val="music">Beruhigende Musik</button>
-              <button data-val="breathing">Atemübungen/Meditieren</button>
-              <button data-val="warmShower">Warme Dusche</button>
+            <div class="chips" id="rituals" aria-label="Einschlafrituale">
+              <button data-val="read" title="Gelesen">📖 Gelesen</button>
+              <button data-val="music" title="Beruhigende Musik">🎵 Musik</button>
+              <button data-val="breathing" title="Atemübungen/Meditieren">🫁 Atemübung</button>
+              <button data-val="warmShower" title="Warme Dusche">🚿 Warme Dusche</button>
+            </div>
+            <div class="row g2" style="margin-top:6px">
+              <div class="col"><label for="ritualAddInput">Eigenes Ritual hinzufügen</label><input type="text" id="ritualAddInput" placeholder="z. B. Tagebuch, Tee, Dehnen …"></div>
+              <div class="col"><label>&nbsp;</label><button id="ritualAddBtn" class="secondary">Zur Liste hinzufügen</button></div>
             </div>
           </div>
           <div>
@@ -144,19 +156,20 @@
         <button id="saveEntry">Speichern</button>
         <button class="secondary" id="newEntry">Neu</button>
         <button class="ghost" id="deleteEntry">Eintrag löschen</button>
+        <span id="toast" class="toast" role="status" aria-live="polite"></span>
       </div>
     </section>
 
-    <!-- Woche -->
     <section id="week" class="tab">
       <div class="card">
         <h3>Wochenübersicht</h3>
-        <div id="weekSummary" class="summary"></div>
-        <div id="weekTableWrap" class="table-wrap"></div>
+        <div id="weekCards" class="stats"></div>
+        <div id="weekLists"></div>
+        <div class="table-toggle"><button class="secondary" id="toggleTableBtn">Tabelle ein-/ausblenden</button></div>
+        <div id="weekTableWrap" class="table-wrap hidden"></div>
       </div>
     </section>
 
-    <!-- Monat -->
     <section id="month" class="tab">
       <div class="card">
         <h3>Monatsübersicht</h3>
@@ -165,46 +178,38 @@
       </div>
     </section>
 
-    <!-- Einstellungen -->
     <section id="settings" class="tab">
+      <div class="card">
+        <h3>Einschlaf-Gründe · Gewichtung</h3>
+        <div id="weightsOnsetList" class="table-wrap"></div>
+        <div class="row g2">
+          <label class="checks"><input type="checkbox" id="adaptiveWeights" checked> Adaptives Lernen aktivieren</label>
+          <button class="secondary" id="resetWeights">Gewichte zurücksetzen</button>
+        </div>
+      </div>
       <div class="card">
         <h3>Daten</h3>
         <div class="row g2">
           <button id="exportJson">Export (JSON)</button>
-          <label class="import">
-            <input type="file" id="importJson" accept="application/json"> Import (JSON)
-          </label>
+          <button id="exportCsv">Export (CSV)</button>
+          <label class="import"><input type="file" id="importJson" accept="application/json"> Import (JSON)</label>
           <button class="secondary" id="clearAll">Alle Daten löschen</button>
         </div>
-      </div>
-
-      <div class="card">
-        <h3>Erinnerungen (nur lokal)</h3>
-        <div class="row g2">
-          <div class="col">
-            <label>Abend-Reminder</label>
-            <input type="time" id="reminderEvening">
-          </div>
-          <div class="col">
-            <label>Morgen-Reminder</label>
-            <input type="time" id="reminderMorning">
-          </div>
-        </div>
-        <p class="muted">Hinweis: Erinnerungen werden als lokale Browser-Benachrichtigungen geplant (wenn du zustimmst).</p>
-        <button id="enableNotifs">Benachrichtigungen aktivieren</button>
       </div>
     </section>
   </main>
 
-  <footer class="footer">
-    <span>Offline-fähige App (PWA). Deine Daten bleiben lokal.</span>
-  </footer>
+  <nav id="bottomTabs" class="bottombar">
+    <a data-tab="home" class="active">🏠<span>Home</span></a>
+    <a data-tab="entry">📝<span>Eintrag</span></a>
+    <a data-tab="week">📊<span>Woche</span></a>
+    <a data-tab="month">🗓️<span>Monat</span></a>
+    <a data-tab="settings">⚙️<span>Einst.</span></a>
+  </nav>
 
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('sw.js');
-      });
+    if (location.protocol.startsWith('http') && 'serviceWorker' in navigator) {
+      window.addEventListener('load', () => navigator.serviceWorker.register('./sw.js'));
     }
   </script>
 </body>
